logs/haiku-lang.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/LEPL-5.1.3.egg-info'...
Listing './lib/python3.5/site-packages/bitstring-3.1.5.egg-info'...
Listing './lib/python3.5/site-packages/haiku'...
Listing './lib/python3.5/site-packages/haiku/builtin'...
Listing './lib/python3.5/site-packages/haiku/interpreter'...
Listing './lib/python3.5/site-packages/haiku/pickle'...
Compiling './lib/python3.5/site-packages/haiku/pickle/canonical__test.py'...
***   File "./lib/python3.5/site-packages/haiku/pickle/canonical__test.py", line 92
    eval_  = [36893488147419103232L],
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haiku/pickle/simple__test.py'...
***   File "./lib/python3.5/site-packages/haiku/pickle/simple__test.py", line 112
    eval_  = [36893488147419103232L]),
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haiku/shell.py'...
***   File "./lib/python3.5/site-packages/haiku/shell.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haiku/types'...
Listing './lib/python3.5/site-packages/haiku/utils'...
Listing './lib/python3.5/site-packages/haiku_lang-0.0.7.egg-info'...
Listing './lib/python3.5/site-packages/lepl'...
Listing './lib/python3.5/site-packages/lepl/_example'...
Listing './lib/python3.5/site-packages/lepl/_test'...
Listing './lib/python3.5/site-packages/lepl/apps'...
Listing './lib/python3.5/site-packages/lepl/apps/_test'...
Listing './lib/python3.5/site-packages/lepl/bin'...
Listing './lib/python3.5/site-packages/lepl/bin/_example'...
Listing './lib/python3.5/site-packages/lepl/bin/_test'...
Listing './lib/python3.5/site-packages/lepl/contrib'...
Listing './lib/python3.5/site-packages/lepl/core'...
Listing './lib/python3.5/site-packages/lepl/core/_test'...
Listing './lib/python3.5/site-packages/lepl/lexer'...
Listing './lib/python3.5/site-packages/lepl/lexer/_example'...
Listing './lib/python3.5/site-packages/lepl/lexer/_test'...
Listing './lib/python3.5/site-packages/lepl/lexer/lines'...
Listing './lib/python3.5/site-packages/lepl/lexer/lines/_example'...
Listing './lib/python3.5/site-packages/lepl/lexer/lines/_test'...
Listing './lib/python3.5/site-packages/lepl/matchers'...
Listing './lib/python3.5/site-packages/lepl/matchers/_test'...
Listing './lib/python3.5/site-packages/lepl/regexp'...
Listing './lib/python3.5/site-packages/lepl/regexp/_test'...
Listing './lib/python3.5/site-packages/lepl/stream'...
Listing './lib/python3.5/site-packages/lepl/stream/_test'...
Listing './lib/python3.5/site-packages/lepl/support'...
Listing './lib/python3.5/site-packages/lepl/support/_test'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_patterns'...
Listing './lib/python3.5/site-packages/python_patterns/itertools'...
Compiling './lib/python3.5/site-packages/python_patterns/itertools/lookahead.py'...
***   File "./lib/python3.5/site-packages/python_patterns/itertools/lookahead.py", line 80
    raise TypeError, "%s() takes 1, 2, or 3 arguments (%d given)" % \
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/python_patterns/unittest'...
Listing './lib/python3.5/site-packages/python_patterns/utils'...
Compiling './lib/python3.5/site-packages/python_patterns/utils/base_encode.py'...
***   File "./lib/python3.5/site-packages/python_patterns/utils/base_encode.py", line 57
    raise ValueError, "cannot base encode negative number: %d" % num
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/python_patterns-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
